--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -266,5 +266,5 @@
 
     <!-- Hidden apps -->
     <string name="hidden_apps_title">Hidden apps</string>
-    <string name="hidden_apps_summary">Applications that should be hidden from launcher. Requires a launcher restart for changes to take effect</string>
+    <string name="hidden_apps_summary">Applications that should be hidden from launcher</string>
 </resources>
